--- a/index.html
+++ b/index.html
@@ -1,49 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>SWLA Business Directory</title>
+</head>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Swla-frame : SWLA Business Directory" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Swla-frame</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/swlabusinessdirectory/swla-frame">View on GitHub</a>
-
-          <h1 id="project_title">Swla-frame</h1>
-          <h2 id="project_tagline">SWLA Business Directory</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/swlabusinessdirectory/swla-frame/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/swlabusinessdirectory/swla-frame/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Swla-frame maintained by <a href="https://github.com/swlabusinessdirectory">swlabusinessdirectory</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<body>
+<iframe src="http://www.myschedulingwebsite.com/" style="width:100%; height:100%;"></iframe>
+</body>
 </html>
