--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<iframe src="http://www.myschedulingwebsite.com/" style="width:100%; height:100%;"></iframe>
+<iframe src="http://www.erichjfischer.com/swlabusinessdirectory/index.html/" style="width:100%; height:100%;"></iframe>
 </body>
 </html>
