--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<style="html, body { height: 100% }">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>SWLA Business Directory</title>
 </head>
 
 <body>
-<iframe src="http://www.erichjfischer.com/swlabusinessdirectory" style="width:100%; height:100%;"></iframe>
+<iframe src="http://www.erichjfischer.com/swlabusinessdirectory/index.html/" style="width:100%; height:100%;"></iframe>
 </body>
 </html>
