--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>SWLA Business Directory</title>
 </head>
 
-<body onload="onload="window.frames['shoutbox'].location.href='http://www.erichjfischer.com/swlabusinessdirectory/index.html/';">
-<iframe name="shoutbox" src="blank.html" width="100%" height="100%" frameborder="0" allowTransparency="true"></iframe>
+<body>
+<iframe src="http://www.erichjfischer.com/swlabusinessdirectory/index.html/" style="width:100%; height:100%;"></iframe>
 </body>
 </html>
